<resources>
    <string name="app_name">Progetto S3</string>
    <string name="title_activity_login">Progetto S3</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi o registra</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HOME</string>
    <string name="txtUsername">txtUsername</string>
    <string name="btnLogout">btnLogout</string>
    <string name="logout">Logout</string>
    <string name="btnRicercaEsercizi">Ricerca Esercizi</string>
    <string name="btnInserimentoEsercizi">Inserimento esercizi</string>
    <string name="btnStatisticheEsercizi">Statistiche esercizi</string>
    <string name="rdRicercaDettagliata">Ricerca dettagliata</string>
    <string name="rdRicercaGenerica">Ricerca generica</string>
    <string name="textLibro">Libro</string>
    <string name="textMateria">Materia</string>
    <string name="indicare_il_numero">Indicare il numero</string>
    <string name="ricerca">Ricerca</string>
    <string-array name="materie">
        <item>Scegli la materia....</item>
        <item>Geografia</item>
        <item>Scienze</item>
        <item>Storia</item>
        <item>Analisi matematica</item>
        <item>Informatica</item>
    </string-array>
    <string-array name="libri">
        <item>Scegli un libro...</item>
        <item>La storia degli oceani</item>
        <item>Viva Italia</item>
        <item>Cristiano Ronaldo: un mito</item>
        <item>Pierino contro tutti</item>
        <item>Non ci resta che leggere</item>
    </string-array>
    <string-array name="capitoli">
        <item>Scegli un capitolo...</item>
        <item>Capitolo 1</item>
        <item>Capitolo 1</item>
        <item>Capitolo 1</item>
        <item>Capitolo 1</item>
        <item>Capitolo 1</item>
    </string-array>
    <string name="title_activity_cronometro_esercizio">CronometroEsercizioActivity</string>
    <string name="avvia">Avvia</string>
    <string name="ferma">Ferma</string>
    <string name="txtCentesimi">:00</string>
    <string name="timer">Timer</string>
    <string name="azzera">Azzera</string>
    <string name="btnMeno">-</string>
    <string name="btnPiu">+</string>
    <string name="codice_esercizio">Codice esercizio</string>
    <string name="categoria">Categoria</string>
    <string name="libro">Libro</string>
    <string name="title_activity_giancarlo">GiancarloActivity</string>
</resources>
